--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,3 +16,13 @@ jobs:
         run: chmod +x gradlew
       - name: Build & Checks
         run: ./gradlew clean build --no-daemon
+      - name: SpotBugs (main & test)
+        run: ./gradlew spotbugsMain spotbugsTest --no-daemon
+      - name: Upload SpotBugs reports
+        uses: actions/upload-artifact@v4
+        with:
+         name: spotbugs-reports
+         path: |
+          build/reports/spotbugs/main.html
+          build/reports/spotbugs/test.html
+         if-no-files-found: ignore
