--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,22 +7,29 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '17'
+
       - uses: gradle/actions/setup-gradle@v4
+
       - name: Make Gradle wrapper executable
         run: chmod +x gradlew
+
       - name: Build & Checks
         run: ./gradlew clean build --no-daemon
+
       - name: SpotBugs (main & test)
         run: ./gradlew spotbugsMain spotbugsTest --no-daemon
+
       - name: Upload SpotBugs reports
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-         name: spotbugs-reports
-         path: |
-          build/reports/spotbugs/main.html
-          build/reports/spotbugs/test.html
-         if-no-files-found: ignore
+          name: spotbugs-reports
+          path: |
+            build/reports/spotbugs/main.html
+            build/reports/spotbugs/test.html
+          if-no-files-found: ignore
