--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: myfinanceapp-${{ github.ref_name }}-${{ github.run_number }}
-          path: build/libs/*.jar
+          path: | 
+           build/libs/*.jar
           if-no-files-found: warn
           retention-days: 7
 
