--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,34 +1,40 @@
 name: CI
+
 on:
   push:
   pull_request:
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '17'
 
-      - uses: gradle/actions/setup-gradle@v4
+      - name: Setup Gradle (with caching)
+        uses: gradle/actions/setup-gradle@v4
 
       - name: Make Gradle wrapper executable
         run: chmod +x gradlew
 
-      # 1) Сначала соберём JAR, чтобы он гарантированно был даже если чек упадёт позже
-      - name: Assemble JAR
+      # 1) Сначала собираем JAR, чтобы он гарантированно был даже если дальше чек уронит билд
+      - name: Assemble JAR (pre-build)
         run: ./gradlew clean assemble --no-daemon --stacktrace
 
-      # 2) Теперь полный build (включает check; у тебя check завязан на jacocoCoverage)
+      # 2) Полный build: включает check; а check у тебя зависит от jacocoTestReport и jacocoCoverage
       - name: Build & Checks (tests + coverage gate)
         run: ./gradlew build --no-daemon --stacktrace
 
-      # 3) Публикуем JAR — теперь он точно есть
+      # 3) Публикуем JAR — он уже собран на шаге assemble
       - name: Upload build artifacts (JAR)
-        if: success()   # если хочешь только на зелёной — поменяй на success()
+        if: always()  # поменяй на success() если нужно только на "зелёной" сборке
         uses: actions/upload-artifact@v4
         with:
           name: myfinanceapp-${{ github.ref_name }}-${{ github.run_number }}
@@ -37,6 +43,7 @@ jobs:
           if-no-files-found: warn
           retention-days: 7
 
+      # 4) SpotBugs: если у тебя эти задачи уже подвешены на check — можно удалить этот шаг
       - name: SpotBugs (main & test)
         run: ./gradlew spotbugsMain spotbugsTest --no-daemon
 
@@ -51,7 +58,7 @@ jobs:
           if-no-files-found: ignore
           retention-days: 7
 
-      # Отчёты тестов и покрытия всегда прикладываем
+      # 5) Тестовые и coverage отчёты — всегда прикрепляем
       - name: Upload JUnit test report
         if: always()
         uses: actions/upload-artifact@v4
@@ -78,10 +85,3 @@ jobs:
           path: build/reports/checkstyle
           if-no-files-found: ignore
           retention-days: 7
-
-      # (необязательный шаг для быстрой диагностики путей)
-      - name: List build outputs (debug)
-        if: always()
-        run: |
-          echo "=== ls -R build ==="
-          ls -R build || true
