--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
         if: success()
         uses: actions/upload-artifact@v4
         with:
-          name: myfinanceapp-${{ github.ref_name }}-${{ github.run_number }}
+          name: myfinanceapp-${{ replace(github.head_ref != '' && github.head_ref || github.ref_name, '/', '-') }}-${{ github.run_number }}
           path: '**/build/libs/*.jar'
           if-no-files-found: warn
           retention-days: 7
