--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,9 +94,13 @@ jobs:
         uses: cicirello/jacoco-badge-generator@v2.12.1
         with:
           jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
-          output: badges/jacoco.svg
+          badges-directory: badges
+          coverage-badge-filename: jacoco.svg
+          branches-badge-filename: branches.svg
+          generate-coverage-badge: true
           generate-branches-badge: true
-          branches-output: badges/branches.svg
+          # опционально, чтобы не падал ран, если вдруг CSV не найден:
+          # on-missing-report: warn
 
       - name: Commit badges
         if: github.event_name != 'pull_request'
